# BirdChirp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  conanprofile.txt
application/: .gitignore  CMakeLists.txt
application/bird_chirp_application/: CMakeLists.txt  bird_chirp_application_en_GB.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/: CMakeLists.txt
client/include/: receiver_pop3.h
client/src/: receiver_pop3.cc
configuration/: CMakeLists.txt
configuration/include/: config_reader.h
configuration/src/: config_reader.cc
console_utility/: CMakeLists.txt
console_utility/src/: bird_chirp.cc
core/: CMakeLists.txt
core/include/: Setup.h  receiver_pop3.h  setup.h
core/src/: base_mail_receiver.cc  base_mail_receiver.h  default_ports.h  pch.cc  pch.h  receiver_pop3.cc
core/src/receiving/: base_mail_receiver.cc  base_mail_receiver.h
logging/: CMakeLists.txt
logging/include/: application_logger.h  base_logger.h  client_logger.h  core_logger.h  default_logger.h  logger_names.h  server_logger.h  utility_logger.h
logging/src/: base_logger.cc
server/: CMakeLists.txt
server/src/: pop3_server.cc
server/storage/: CMakeLists.txt
storage/: CMakeLists.txt
tools/: CMakeLists.txt
tools/include/: singleton.h
utility/: CMakeLists.txt
utility/src/: arguments.h  bird_chirp.cc  pch.h  protocols.h
utility/src/strategies/: base_strategy.cc  base_strategy.h  strategy_factory.cc  strategy_factory.h
utility/src/strategies/commands/: commands_imap.h  commands_pop3.h  commands_smtp.h
utility/src/strategies/concrete_strategies/: strategy_imap.cc  strategy_imap.h  strategy_pop3.cc  strategy_pop3.h  strategy_smtp.cc  strategy_smtp.h
